= Changelog

== `0.7.1.0`

* Frontend
  ** Improve time picker. New simple design like a digital clock.
  ** Improve space view to create reservations.

== `0.7.0.0`

* Backend
  ** Add `sqlite.check-data-integrity-on-startup` field to configuration to run sanity checks on the database.
* Database
  ** Remove space members which might have malicously tried to use a role from a different space to gain access.
    *** This exploit is fixed now.
  ** Add new permission `edit_role`.
     Given to everyone who also has the `edit_space` permission.
* API
  ** Use `edit-space` permission for `/space/kick` and `/space/user/role`.

== `0.6.4.1`

* Frontend
  ** Forward to dashboard after successful email verification.

== `0.6.4.0`

* Frontend
  ** Add new page to view user profiles.
  ** Add new page to edit your user settings.
  ** Add new page to confirm your email.
* API
  ** Add `/password` route to change your user password.
  ** Add `/confirmation/request` route to send a verification email to your email address.
  ** Add `email-verified` field to response body of route `/profile`.
  ** Change response structure of `/space/view`.
  ** Route `/desk/list` checks the `view_space` permission now.
  ** Respond with HTTP 409 at `/register` when the username is already taken.
  ** Respond with HTTP 409 at `/reservation/cancel` when the reservation is already cancelled.
  ** Respond with HTTP 410 at `/reservation/cancel` when the reservation already happened.
  ** Restrict password characters.

== `0.6.3.3`

* Frontend
  ** Add explanation texts to popups.

== `0.6.3.2`

* Frontend
  ** Improve layout.
    *** Dropdown menu.
    *** Various buttons.

== `0.6.3.1`

* Frontend
  ** Add navigation buttons to dashboard.

== `0.6.3.0`

* Frontend
  ** Add new dashboard page.
  ** Support preloaded fonts.
* Backend
  ** Add `fonts` field to configuration.
* API
  ** Add support for multiple enumerable static messages on HTTP errors affecting some routes.
    *** `/space/join`